[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
rusqlite = "0.32.1"
opensearch = "2.3.0"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
dotenv = "0.15.0"
