[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
axum = "0.8.1"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
opensearch = "2.3.0"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
once_cell = "1.20.2"
